# diplom

./: additionaldata.ipynb  ar-ma-ag-model.ipynb  arimamonth2022.ipynb  arimamonth2025.ipynb  arimaxcheck.ipynb  arimaxfull.ipynb  arimaxmonth.ipynb  arimaxmonthfull.ipynb  base_model.ipynb  charts.ipynb  demand_forecast_2025_colab.ipynb  demand_forecast_sarimax_colab_ipynb.ipynb  demand_primary_training_minimal_dictionary.csv  full_base.ipynb  giffengoods.ipynb  impact.ipynb  kaggle.json  modelfinder.ipynb  overflow.ipynb  price_spred.ipynb  pyproject.toml  reset_and_rebuild_rostat_dataset_colab.ipynb  sales_dynamics.ipynb
.ipynb_checkpoints/: arimax-checkpoint.ipynb  arimaxcheck-checkpoint.ipynb  arimaxfull-checkpoint.ipynb  arimaxmonth-checkpoint.ipynb  base_model-checkpoint.ipynb  charts-checkpoint.ipynb  demand_forecast_sarimax_colab_ipynb-checkpoint.ipynb  full_base-checkpoint.ipynb  overflow-checkpoint.ipynb  rebuild_min_dataset-checkpoint.py
dataset/: [2016-2026]_tovar_zapas.xls  [2017-2022]_price_index_proizvodstvo.xls  [2017-2025]_sales_dynamics.xls  [2023-2026]_price_index_proizvodstvo.xls  category_metrics_target_wape_under_10_attempt.csv  deep_diagnostics_problem_factors.csv  deep_diagnostics_problem_periods.csv  deep_diagnostics_problem_products.csv  deep_diagnostics_reason_interpretation.csv  demand_primary_training_minimal_summary.txt  demand_training_with_physical_volume.csv  diagnostics_bad_categories_model_selection.csv  diagnostics_bad_categories_product_contribution.csv  diagnostics_bad_categories_quarter_contribution.csv  (+63 more)
(+95 files in other folders)
