[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["mirzaev.arsen <arsen.00z11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
jupyterlab = "^4.5.7"
notebook = "^7.5.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
